--- a/ansible/production.yml
+++ b/ansible/production.yml
@@ -1,6 +1,6 @@
 ---
 - name: Playbook for production
-  hosts: production
+  hosts: production-*
   become: yes
   vars_files:
     - vars/common.yml
@@ -10,4 +10,5 @@
     - nodejs
     - mysql
     - ruby
+    - user
     - vim
