--- a/ansible/production.yml
+++ b/ansible/production.yml
@@ -5,10 +5,11 @@
   vars_files:
     - vars/common.yml
   roles:
-    - git
-    - nginx
-    - nodejs
-    - mysql
-    - ruby
-    - user
-    - vim
+   - common
+   - git
+   - nginx
+   - nodejs
+   - mysql
+   - ruby
+   - user
+   - vim
