--- a/ansible/roles/mysql/tasks/main.yml
+++ b/ansible/roles/mysql/tasks/main.yml
@@ -1,101 +1,64 @@
-# MySQLパッケージのinstall
-- name: Ensure MySQL related Packages
-  become: yes
+---
+- name: Install dependent packages of MySQL
   yum:
     name: "{{ packages }}"
     state: present
+    lock_timeout: 180
   vars:
     packages:
       - MySQL-python
       - libselinux-python
       - yum-utils
 
-- name: Install epel-release mysql version 8.0
+- name: Add mysql 8.0 repository
   yum:
     name: https://dev.mysql.com/get/mysql80-community-release-el7-1.noarch.rpm
-    state: present
+    lock_timeout: 180
 
-- name: Disable mysql57-community
-  command: yum-config-manager --disable mysql57-community
-
-- name: Disable mysql56-community
-  command: yum-config-manager --disable mysql57-community
-
-- name: Enable mysql80-community
-  command: yum-config-manager --enable mysql80-community
+- name: Enable mysql 8.0 Repository
+  command: >
+    yum-config-manager --enable mysql80-community
 
 - name: Install MySQL
   yum:
-    name: '{{ packages }}'
-    state: present
-  vars:
-    packages:
-      - mysql-community-devel
-      - mysql-community-server
-      - mysql-community-client
-      - mysql-community-common
-      - mysql-community-libs
+    name: ['mysql-community-server',
+           'mysql-community-client',
+           'mysql-community-common',
+           'mysql-community-libs']
+    lock_timeout: 180
 
-- name: Start MySQL service
+- name: Setting up automatic startup of mysql
   service:
     name: mysqld
-    enabled: yes
     state: started
+    enabled: yes
 
-- name: Put /root/.my.cnf
+- name: Edit /root/.my.cnf
   template:
-    src: roles/mysql/templates/my.conf.j2
+    src: roles/mysql/templates/my.cnf.j2
     dest: /root/.my.cnf
     owner: root
     group: root
     mode: 0600
 
-- name: enable mysql
-  systemd:
+- name: Start MySQL service
+  service:
     name: mysqld
+    state: started
     enabled: yes
-    state: restarted
-  become: yes
 
-# ルートパスワードの取得
 - name: get root password
   shell: "grep 'A temporary password is generated for root@localhost' /var/log/mysqld.log | awk -F ' ' '{print $(NF)}'"
   register: root_password
+  become: yes
 
 - name: Level down of validate_password.policy
-  command: mysql --user root --password={{ root_password }} --connect-expired-password --execute="set global validate_password.policy = "LOW";"
+  command: mysql -u root -p{{ root_password.stdout }} --connect-expired-password -e "SET GLOBAL validate_password.policy=LOW;"
 
-- name: Level down of validate_password.policy
-  command: mysql --user root --password={{ root_password }} --connect-expired-password --execute="set global validate_password.special_char_count = 0;"
+- name: Level down of validate_password_special_char_count
+  command: mysql -u root -p{{ root_password.stdout }} --connect-expired-password -e "SET GLOBAL validate_password.special_char_count=0;"
 
 - name: update expired root user password
-  command: mysql --user root --password={{ root_password }} --connect-expired-password --execute="ALTER USER 'root'@'localhost' IDENTIFIED BY '{{ db_pass }}';"
- 
-- name: update root user plugin
-  command: mysql --user root --password={{ db_pass }} --execute="ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY '{{ db_pass }}';"
+  command: mysql -u root -p{{ root_password.stdout }} --connect-expired-password -e "ALTER USER 'root'@'localhost' IDENTIFIED BY '{{ db_pass }}';"
 
-- name: Change root password
-  mysql_user:
-    name: root
-    login_user: root
-    login_password: "{{ root_password }}"
-    password: '{{ db_pass }}'
-    check_implicit_admin: yes
 
-- name: Create user
-  mysql_user:
-    name: '{{ local_db_user }}'
-    password: '{{ db_pass }}'
-    host: '{{ hosts }}'
-    priv: '*.*:ALL,GRANT'
-    state: present
-  vars:
-    hosts:
-      - localhost
-      - '%'
-
-- name: Create database
-  mysql_db:
-    name: '{{ db_name }}'
-    state: present
-    encoding: utf8
